--- a/_config.yml
+++ b/_config.yml
@@ -260,3 +260,6 @@ plugins:
 # Beautiful Jekyll / Dean Attali
 # 2fc73a3a967e97599c9763d05e564189
 
+
+# Google Analytics
+google_analytics: UA-159259301-1
