--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ navbar-links:
   # Twittes: 'pages/tweets'
   Blogs: "pages/blogs"
   Download CV: "https://drive.google.com/file/d/1LsrXQ5OJ6ugbPvKJ05zgLkm6LsS0S5oa/view?usp=sharing"
+  Lets Read : "pages/read"
   #   - Beautiful Jekyll: "https://beautifuljekyll.com"
   #   - Learn markdown: "https://www.markdowntutorial.com/"
   # Author's home: "https://deanattali.com"
