update google scholar link

--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ social-network-links:
 #  calendly: yourname
 #  mastodon: instance.url/@username
 #  ORCID: your ORCID ID
-  google-scholar: https://graphics.cg.uni-saarland.de/people/azime.html
+  google-scholar: https://scholar.google.com/citations?hl=en&view_op=list_works&gmla=AJsN-F5ZygHGfjTTfXaA4lpxIXUAvcpMFA5hmtAgCMoQdX_8bUkTOPyOOpkiTI5E83Ywc-eeWMnVygyVkqQ793j5X5-XXPuzeA&user=PcAQRn0AAAAJ    #https://graphics.cg.uni-saarland.de/people/azime.html
 #  discord: invite/invite_code or users/userid 
 
 # If you want your website to generate an RSS feed, provide a description
