--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # --- Required options --- #
 
 # Name of website
-title: I
+title: Israel Abebe Azime
 
 # Your name to show in the footer
 author: Israel Abebe
@@ -19,7 +19,7 @@ navbar-links:
   # Twittes: 'pages/tweets'
   Blogs: "pages/blogs"
   Download CV: "https://drive.google.com/file/d/1LsrXQ5OJ6ugbPvKJ05zgLkm6LsS0S5oa/view?usp=sharing"
-  Lets Read : "pages/read"
+  # Lets Read : "pages/read"
   #   - Beautiful Jekyll: "https://beautifuljekyll.com"
   #   - Learn markdown: "https://www.markdowntutorial.com/"
   # Author's home: "https://deanattali.com"
