--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # --- Required options --- #
 
 # Name of website
-title: Israel Abebe Azime
+title: I
 
 # Your name to show in the footer
 author: Israel Abebe
