--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ author: Israel Abebe
 
 navbar-links:
 
-  Projects: "pages/projects"
+  Projects/Publications: "pages/projects"
   # Twittes: 'pages/tweets'
   Blogs: "pages/blogs"
   Download CV: "https://drive.google.com/file/d/1BREyYZsclYPxORjgmehOFBt1qz8MCU4D/view?usp=sharing"
