--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ social-network-links:
 #  snapchat: deanat78
 #  instagram: deanat78
 #  spotify: yourname
-  telephone: +4915236952268
+  # telephone: 111111111
 #  steam: deanat78
 #  twitch: yourname
 #  yelp: yourname
